--- a/src/scss/sections/_calculate.scss
+++ b/src/scss/sections/_calculate.scss
@@ -209,6 +209,7 @@
 		padding-right: 15px;
 		min-width: 54px;
 		height: 54px;
+		background-color: $sec4;
 		span{
 			display: none;
 			@media(max-width:1279px){
