--- a/src/pug/sections/_calculate.pug
+++ b/src/pug/sections/_calculate.pug
@@ -30,477 +30,10 @@
 				
 				//====== FORM ==========================
 				form.calculator-form
-					.calculator-form-page
-						//==== form-block  Тип организации =====
-						.calculator-form__group.flex-center
-							.large-card
-								.project-card
-									.project-card__head
-										.body-bold  Тип организации
-										
-									.project-card__footer
-										p Выберите тип организации
+					include _calculate-form-1
+					include _calculate-form-2
+					include _calculate-form-modal
 
-								.large-card__text
-									.form-checkbox
-										label.fl-column
-											input(type="checkbox" name="name_1")
-											.form-item__pic
-												svg.svg-icon_1
-													use(href="./img/spriteSvg.svg#svg-icon_1")
-											.body-5 Микропредприятие
-									+calc-check('checkbox', '2', 2,'Малое предприятие')
-									+calc-check('checkbox', '3', 3,'Среднее предприятие')
-									+calc-check('checkbox', '4', 4,'Крупное предприятие')
-						
-						//==== form-block Тип поддержки =====
-						.calculator-form__group.flex-center
-							.large-card
-								.project-card
-									.project-card__head
-										.body-bold  Тип поддержки
-										
-										//==== переключатель  блоков с отраслями по 6 штук на десктоп версии  в правой колонке внутри  =====
-										.categories-page-toggle.flex-768
-											button.circle-button.active
-											button.circle-button
-											button.circle-button
-									
-									
-									.project-card__footer
-										p Выберите тип поддержки
-
-								.large-card__text
-									
-									+calc-check('checkbox', '5', 5,'Консультационная')
-									+calc-check('checkbox', '6', 6,'Налоговая')
-									+calc-check('checkbox', '7', 7,'Кредиты и займы')
-									+calc-check('checkbox', '8', 8,'Субсидия')
-									+calc-check('checkbox', '9', 9,'Имущественная')
-									+calc-check('checkbox', '10', 10,'Образовательная')
-									
-									// =====Если элементов больше, чем 6 , то добавляется юлок с кнопками -переключения страниц с элементами.
-									.categories-page-toggle.flex-mobile
-										button.circle-button.active
-										button.circle-button
-										button.circle-button
-						
-						//==== Отрасль реализации инвестиционного проекта =====
-						.calculator-form__group
-							.large-card.switch-block
-								.project-card
-									.project-card__head
-										.body-bold  Отрасль реализации инвестиционного проекта
-										
-										//==== переключатель отрасль / оквэд
-										label.switch-item.switch-toggle
-											p Отрасль
-											input(type="checkbox" checked)
-											.switch-item__toggle
-												span
-												span
-											p ОКВЭД
-									
-										
-										//==== переключатель  отраслей на десктоп версии , которые отображаются по 9 штук в правой колонке внутри .industry-grid__block =====
-										.categories-page-toggle.flex-768
-											button.circle-button.active
-											button.circle-button
-											button.circle-button
-									
-									
-									.project-card__footer
-										p Выберите тип организации
-
-								
-								.large-card__text
-									//=======контент для ОТРАСЛЬ ========
-									.switch-content_of.active
-										.industry-grid__block
-											+calc-check('checkbox', '5', 5,'Консультационная')
-											+calc-check('checkbox', '6', 6,'Налоговая')
-											+calc-check('checkbox', '7', 7,'Кредиты и займы')
-											+calc-check('checkbox', '8', 8,'Субсидия')
-											+calc-check('checkbox', '9', 9,'Имущественная')
-											+calc-check('checkbox', '10', 10,'Образовательная')
-											+calc-check('checkbox', '8', 8,'Субсидия')
-											+calc-check('checkbox', '9', 9,'Имущественная')
-											+calc-check('checkbox', '10', 10,'Образовательная')
-									
-											//==== переключатель отраслей на мобильной версии , которые отображаются по 9 штук в правой колонке внутри .industry-grid__block =====
-											.categories-page-toggle.flex-mobile
-												button.circle-button.active
-												button.circle-button
-												button.circle-button
-									//=======контент для ОКВЭД========
-									.switch-content_on
-										.form-item.form-item-okved
-											
-											.mySelect.mySelect-okved
-												.mySelect-okved__row
-													.mySelect-input
-														.mySelect-okved-group
-															//===== выбранные коды =======
-															.selectValue
-																
-																//===== single number ===== =======
-																.tag
-																	span 05
-																	span
-																		svg.svg-cross
-																			use(href="../img/spriteSvg.svg#svg-cross")
-																//===== single number ===== =======
-																.tag
-																	span 05
-																	span
-																		svg.svg-cross
-																			use(href="../img/spriteSvg.svg#svg-cross")
-																
-																
-																//===== total ===== =======
-																span.total-tags  +25
-																
-														//==== кнопка, открывающая drop список=====
-														button.mySelect-icon.mini-btn
-															svg.svg-down
-																use(href="./img/spriteSvg.svg#svg-down")
-													
-													.mySelect-okved-btns
-														//==== кнопка, очистить выбранные данные =====
-														button.btn.clean-selectValue.visible
-															span Очистить все
-															svg.svg-close
-																use(href="./img/spriteSvg.svg#svg-close")
-														
-														//==== кнопка, открывающая список кодов ОКВЭД в модальном окне=====
-														button.mini-btn(frame-btn="modal-okved") 111
-												
-												//====  drop список=====
-												.mySelect-drop
-													//===== Если нет значений, отображается тег <p> с текстом  Нет данных
-													
-													ul
-														
-														li
-															
-															p Нет данных
-														li
-															.form-checkbox.okved-item
-																label
-																	input(type="checkbox" name="" checked )
-																	span.fake-checkbox
-																	span.okved-num 05
-																	p.okved-name Добыча угля
-														li
-															.form-checkbox.okved-item
-																label
-																	input(type="checkbox" name="" checked )
-																	span.fake-checkbox
-																	span.okved-num 06
-																	p.okved-name Добыча сырой нефти и природного газа
-														li
-															.form-checkbox.okved-item
-																label
-																	input(type="checkbox" name="")
-																	span.fake-checkbox
-																	span.okved-num B
-																	p.okved-name Добыча полезных ископаемых
-														li
-															.form-checkbox.okved-item
-																label
-																	input(type="checkbox" name="")
-																	span.fake-checkbox
-																	span.okved-num 03.1
-																	p.okved-name Рыболовство
-											
-														li
-															.form-checkbox.okved-item
-																label
-																	input(type="checkbox" name="")
-																	span.fake-checkbox
-																	span.okved-num 03.2
-																	p.okved-name Рыболовство
-											
-														li
-															.form-checkbox.okved-item
-																label
-																	input(type="checkbox" name="")
-																	span.fake-checkbox
-																	span.okved-num 01.1
-																	p.okved-name Выращивание однолетних культур
-									
-						
-						.calculator-form-footer.fl-block
-							button.btn(type="button")
-								span Очистить фильтры
-								svg.svg-reload
-									use(href="./img/spriteSvg.svg#svg-reload")
-							
-							.fly-center
-								button.btn-accent(type="button")
-									span Далее
-									svg.chevron-right
-										use(href="./img/spriteSvg.svg#chevron-right")
-								
-								.calculator-page 1/2
-					
-					
-					.modal-frame-wrapper.okved-modal(frame-modal="modal-okved")
-						.modal-frame
-							//=====TOP======
-							.okved-modal__header
-								//======title row ======
-								.okved-modal__title.fly-center
-									.h2 Выбор вида экономической деятельности
-									button.icon-close(frame-close)
-								
-								//===== row=================
-								.okved-modal__top.fly-center
-									button(type="button").btn.okved-modal-clean
-										span Снять все коды
-										svg.svg-cross
-											use(href="./img/spriteSVG.svg#svg-cross")
-									.okved-modal__input
-										.form-item
-											input.form-input(type="text" placeholder="Код")
-							.scroll-wrapper
-								.okved-modal__body
-									//=== level 1 ========
-									ul.okved-list
-										//============ LEVEL  1  ===================
-										li.livel_1.okved-sub-item
-											.okved-list__header.py-30
-												label.form-checkbox
-													input(type="checkbox" name="" )
-													span.fake-checkbox
-													span.okved-num A
-												
-												.okved-list__text
-													.okved-name.body-3  Сельское, Лесное Хозяйство, Охота, Рыболовство и Рыбоводство
-													
-													//====иконка галочка ========
-													.okved-list__icon
-														svg.svg-down
-															use(href="./img/spriteSvg.svg#svg-down")
-											
-											//========= Подкатегории ОКВЭД ========
-											.livel_1-drop
-												//=== level 2 ========
-												ul.okved-sublist.okved-sublist__level-2
-													li.okved-sublist__block.okved-sub-item
-														.okved-list__header.py-20
-															label.form-checkbox
-																input(type="checkbox" name="" )
-																span.fake-checkbox
-																span.okved-num 01
-															
-															.okved-list__text
-																.okved-name  Растениеводство и животноводство, охота и предоставление соответствующих услуг в этих областях
-																//====иконка галочка ========
-																.okved-list__icon
-																	svg.svg-down
-																		use(href="./img/spriteSvg.svg#svg-down")
-													
-														//=== level 3 ========
-														ul.okved-sublist.okved-sublist__level-3
-															li.okved-sublist__block.okved-sub-item
-																.okved-list__header.py-20
-																	label.form-checkbox
-																		input(type="checkbox" name="" )
-																		span.fake-checkbox
-																		span.okved-num 01.1
-																	
-																	.okved-list__text
-																		.okved-name  Растениеводство и животноводство, охота и предоставление соответствующих услуг в этих областях
-																		//====иконка галочка ========
-																		.okved-list__icon
-																			svg.svg-down
-																				use(href="./img/spriteSvg.svg#svg-down")
-									
-																//=== level 4 ========
-																ul.okved-sublist.okved-sublist__level-4
-																	li.okved-sublist__block.okved-sub-item
-																		.okved-list__header.py-20
-																			label.form-checkbox
-																				input(type="checkbox" name="" )
-																				span.fake-checkbox
-																				span.okved-num 01.11
-																			
-																			.okved-list__text
-																				.okved-name  Растениеводство и животноводство, охота и предоставление соответствующих услуг в этих областях
-																				//====иконка галочка ========
-																				.okved-list__icon
-																					svg.svg-down
-																						use(href="./img/spriteSvg.svg#svg-down")
-
-																		//=== level 5 ========
-																		ul.okved-sublist.okved-sublist__level-5
-																			li.okved-sublist__block
-																				.okved-list__header.py-20
-																					label.form-checkbox
-																						input(type="checkbox" name="" )
-																						span.fake-checkbox
-																						span.okved-num 01.11.1
-																					
-																					.okved-list__text
-																						.okved-name  Растениеводство и животноводство, охота и предоставление соответствующих услуг в этих областях
-																						//====иконка галочка ========
-																						.okved-list__icon
-																							svg.svg-down
-																								use(href="./img/spriteSvg.svg#svg-down")
-
-										//============ LEVEL  1  ===================
-										li.livel_1.okved-sub-item
-											.okved-list__header.py-30
-												label.form-checkbox
-													input(type="checkbox" name="" )
-													span.fake-checkbox
-													span.okved-num B
-												
-												.okved-list__text.fly-center
-													.okved-name.body-3  Добыча полезных ископаемых
-													
-													//====иконка галочка ========
-													.okved-list__icon
-														svg.svg-down
-															use(href="./img/spriteSvg.svg#svg-down")
-											
-											//========= Подкатегории ОКВЭД ========
-											.livel_1-drop
-												//=== level 2 ========
-												ul.okved-sublist.okved-sublist__level-2
-													li.okved-sublist__block
-														.okved-list__header.py-20
-															label.form-checkbox
-																input(type="checkbox" name="" )
-																span.fake-checkbox
-																span.okved-num 05
-															
-															.okved-list__text
-																.okved-name  Добыча угля
-																
-									
-												//=== level 2 ========
-												ul.okved-sublist.okved-sublist__level-2
-													li.okved-sublist__block
-														.okved-list__header.py-20
-															
-															//=====checkbox======
-															label.form-checkbox
-																input(type="checkbox" name="" )
-																span.fake-checkbox
-																span.okved-num 06
-															
-															.okved-list__text
-																.okved-name  Добыча сырой нефти и природного газа
-																
-									
-												//=== level 2 ========
-												ul.okved-sublist.okved-sublist__level-2
-													li.okved-sublist__block
-														.okved-list__header.py-20
-															label.form-checkbox
-																input(type="checkbox" name="" )
-																span.fake-checkbox
-																span.okved-num 07
-															
-															.okved-list__text
-																.okved-name  Добыча металлических руд
-
-						
-										//============ LEVEL  1  ===================
-										li.livel_1.okved-sub-item
-											.okved-list__header.py-30
-												label.form-checkbox
-													input(type="checkbox" name="" )
-													span.fake-checkbox
-													span.okved-num C
-												
-												.okved-list__text.fly-center
-													.okved-name.body-3  Добыча полезных ископаемых
-													
-
-											
-											//========= Подкатегории ОКВЭД ========
-											.livel_1-drop
-												//=== level 2 ========
-												ul.okved-sublist.okved-sublist__level-2
-													li.okved-sublist__block
-														.okved-list__header.py-20
-															label.form-checkbox
-																input(type="checkbox" name="" )
-																span.fake-checkbox
-																span.okved-num 05
-															
-															.okved-list__text
-																.okved-name  Добыча угля
-
-
-										//============ LEVEL  1  ===================
-										li.livel_1.okved-sub-item
-											.okved-list__header.py-30
-												label.form-checkbox
-													input(type="checkbox" name="" )
-													span.fake-checkbox
-													span.okved-num D
-												
-												.okved-list__text.fly-center
-													.okved-name.body-3  Добыча полезных ископаемых
-
-											
-											//========= Подкатегории ОКВЭД ========
-											.livel_1-drop
-												//=== level 2 ========
-												ul.okved-sublist.okved-sublist__level-2
-													li.okved-sublist__block
-														.okved-list__header.py-20
-															label.form-checkbox
-																input(type="checkbox" name="" )
-																span.fake-checkbox
-																span.okved-num 05
-															
-															.okved-list__text
-																.okved-name  Добыча угля
-
-
-										//============ LEVEL  1  ===================
-										li.livel_1.okved-sub-item
-											.okved-list__header.py-30
-												label.form-checkbox
-													input(type="checkbox" name="" )
-													span.fake-checkbox
-													span.okved-num  E
-												
-												.okved-list__text.fly-center
-													.okved-name.body-3  Добыча полезных ископаемых
-													
-													//====иконка галочка ========
-													.okved-list__icon
-														svg.svg-down
-															use(href="./img/spriteSvg.svg#svg-down")
-											
-											//========= Подкатегории ОКВЭД ========
-											.livel_1-drop
-												//=== level 2 ========
-												ul.okved-sublist.okved-sublist__level-2
-													li.okved-sublist__block
-														.okved-list__header.py-20
-															label.form-checkbox
-																input(type="checkbox" name="" )
-																span.fake-checkbox
-																span.okved-num 05
-															
-															.okved-list__text
-																.okved-name  Добыча угля
-
-							
-							//======= footer модального окна ====================
-							.okved-modal__footer
-								button.btn-accent
-									span Применить
-									svg.svg-check
-										use(href="./img/spriteSVG.svg#svg-check")
-		
 				//====== отдельный раздел  =====
 				.partnership-block__wrapper
 					.h3 Сферы применения государственно-частного партнерства:
