--- a/src/libs/rangeSlider/slider.css
+++ b/src/libs/rangeSlider/slider.css
@@ -1,15 +1,30 @@
 /* jxmot customizing */
+#slide-test-1 {
+   
+    height:50px;
+    padding-top:50px;
+    padding-left:50px;
+}
+
+#slide-test-3 {
+    background: black;
+    height:50px;
+    padding-top:50px;
+    padding-left:50px;
+}
 
 html {
-    --slider-active-color: #37adbf;
-    --slider-inactive-color: #b2b2b2;
+--slider-active-color: #B2B9FF;
+  --slider-active-color: #1320b1;
+  --slider-inactive-color: #E1E3EF;
 }
+
 
 
 .range {
   position: relative;
-  width: 550px;
-  height: 5px;
+  width: 100%;
+  height: 6px;
 }
 
 .range input {
@@ -77,15 +92,17 @@ html {
 }
 
 .range-labels {
-  margin: 18px -41px 0;
+  margin: 18px -5px 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  justify-content: space-between;
 }
 
 .range-labels li {
   position: relative;
   float: left;
-  width: 90.25px;
+  width: fit-content;
   text-align: center;
   color: var(--slider-inactive-color);
   font-size: 14px;
@@ -103,6 +120,7 @@ html {
   height: 9px;
   background: var(--slider-inactive-color);
   border-radius: 50%;
+  display: none;
 }
 
 .range-labels .active {
@@ -111,6 +129,7 @@ html {
 
 .range-labels .selected::before {
   background: var(--slider-active-color);
+  background: red;
 }
 
 .range-labels .active.selected::before {
