--- a/src/pug/sections/_calculate-form-2.pug
+++ b/src/pug/sections/_calculate-form-2.pug
@@ -6,10 +6,11 @@
 				#range-1.range
 					input#input-range-1(type='range' min='1' max='7' steps='1' value='1')
 				ul#labels-range-1.range-labels
-					li.active.selected(data-stop='12') 12 hrs
-					li(data-stop='24') 24 hrs
-					li(data-stop='48') 48 hrs
-					li(data-stop='72') 72 hrs
-					li(data-stop='120') 5 days
-					li(data-stop='240') 10 days
-					li(data-stop='360') 15 days
+					li.active.selected(data-stop='0') 0
+					
+					li(data-stop='100') 100
+					li(data-stop='200') 200
+					li(data-stop='300') 300
+					li(data-stop='400') 400
+					li(data-stop='500') 500
+					li(data-stop='600') 600
