--- a/src/pug/ui/icons.pug
+++ b/src/pug/ui/icons.pug
@@ -160,6 +160,20 @@ html(lang="ru")
 							pre.
 								svg.svg-reload
 									use(href="./img/spriteSvg.svg#svg-reload")
+						
+						li
+							svg.svg-right
+								use(href="../img/spriteSvg.svg#svg-right")
+							pre.
+								svg.svg-right
+									use(href="./img/spriteSvg.svg#svg-right")
+
+						li
+							svg.svg-list
+								use(href="../img/spriteSvg.svg#svg-list")
+							pre.
+								svg.svg-list
+									use(href="./img/spriteSvg.svg#svg-list")						
 						li
 							svg.svg-medical
 								use(href="../img/spriteSvg.svg#svg-medical")
