--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -246,3 +246,14 @@ svg{transition: .3s;}
 .svg-icon_5 {
 	width: 34px;
 }
+
+.svg-right{
+	width: 20px;
+	height: 12px;
+	fill:white;
+}
+.svg-list{
+	width: 20px;
+	height: 12px;
+	fill: #767DA2;
+}
