--- a/src/scss/sections/_calculate.scss
+++ b/src/scss/sections/_calculate.scss
@@ -548,3 +548,94 @@
 		}
 	}
 }
+
+
+/* range */
+.range-input {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 100%;
+	cursor: pointer;
+	outline: none;
+	border-radius: 15px;
+	height: 6px;
+	background: $sec2;
+}
+
+.range-input::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	height: 20px;
+	width: 20px;
+	background-color: #B2B9FF;
+	border-radius: 4px;
+	border: none;
+	transition: .2s ease-in-out;
+}
+
+.range-input::-moz-range-thumb {
+	height: 20px;
+	width: 20px;
+	background-color: #B2B9FF;
+	border-radius: 4px;
+	border: none;
+	transition: .2s ease-in-out;
+}
+
+// .range-input::-webkit-slider-thumb:hover {
+// 	box-shadow: 0 0 0 10px rgba(255, 85, 0, .1)
+// }
+
+// .range-input:active::-webkit-slider-thumb {
+// 	box-shadow: 0 0 0 13px rgba(255, 85, 0, .2)
+// }
+
+// .range-input:focus::-webkit-slider-thumb {
+// 	box-shadow: 0 0 0 13px rgba(255, 85, 0, .2)
+// }
+
+// .range-input::-moz-range-thumb:hover {
+// 	box-shadow: 0 0 0 10px rgba(255, 85, 0, .1)
+// }
+
+// .range-input:active::-moz-range-thumb {
+// 	box-shadow: 0 0 0 13px rgba(255, 85, 0, .2)
+// }
+
+// .range-input:focus::-moz-range-thumb {
+// 	box-shadow: 0 0 0 13px rgba(255, 85, 0, .2)
+// }
+
+
+.range-slider {
+	flex: 1;
+	input{padding: 0;}
+}
+
+.sliderticks {
+	display: flex;
+	justify-content: space-between;
+	padding: 10px 12px;
+	font-size: 14px;
+	
+}
+
+.sliderticks span {
+	display: flex;
+	justify-content: center;
+	font-size: 14px;
+	line-height: 1.4;
+	width: fit-content;
+	display: flex;
+	color: $sec;
+	&:nth-child(2n){
+		transform: translateY(-50px);
+	}
+}
+
+
+.range {
+	display: flex;
+	align-items: center;
+	margin-bottom: 1rem;
+}
