--- a/src/pug/layouts/layout-calc.pug
+++ b/src/pug/layouts/layout-calc.pug
@@ -73,26 +73,9 @@ html(lang="ru")
 		//=============== owl.carousel ===================
 		script(src="./libs/owlCarousel/owl.carousel.min.js")
 		
-		//========= range slider ===============
-		//- link(rel="stylesheet", href="./libs/rSlider/rSlider.min.css")
-		link(rel="stylesheet", href="./libs/rangeSlider/slider.css")
-
-		
 		
 		
 		//=============== мои скрипты ===================
 		
 		script(src="./js/form.js")
-		
-		
-		//======== кастомные скрипты =======
-		//- script(src="./libs/rSlider/rSlider.min.js")
-		script(src="./libs/rangeSlider/slider.js")
-		script.
-			function autorun() {
-				slider('range-1');
-				
-			};
-			if (document.addEventListener) document.addEventListener("DOMContentLoaded", autorun, false);
-			else if (document.attachEvent) document.attachEvent("onreadystatechange", autorun);
-			else window.onload = autorun;
+		script(src="./js/calculator-page.js")
