--- a/src/pug/sections/_calculate.pug
+++ b/src/pug/sections/_calculate.pug
@@ -33,6 +33,7 @@
 					include _calculate-form-1
 					include _calculate-form-2
 					include _calculate-form-modal
+					include _calculate-form-3
 
 				//====== отдельный раздел  =====
 				.partnership-block__wrapper
