--- a/src/pug/sections/_calculate-form-1.pug
+++ b/src/pug/sections/_calculate-form-1.pug
@@ -1,5 +1,5 @@
 //============= СТР 1  У формы три страницы, первая страница отображается, вторая bи третья скрыты. Переход между страницами осуществляется через клик по кнопкам в нижней части, клик обрабатывется скриптом.  По клику на кнопку добавляется класс visible  ============
-.calculator-form-page.visible
+.calculator-form-page.visible(data-page="page_1")
 	//==== form-block  Тип организации =====
 	.calculator-form__group.flex-center
 		.large-card
@@ -206,7 +206,7 @@
 				use(href="./img/spriteSvg.svg#svg-reload")
 		
 		.fly-center
-			button.btn-accent#next-page(type="button")
+			button.btn-accent(type="button" data-btn="page_2")
 				span Далее
 				svg.chevron-right
 					use(href="./img/spriteSvg.svg#chevron-right")
