--- a/src/pug/sections/_calculate-form-1.pug
+++ b/src/pug/sections/_calculate-form-1.pug
@@ -142,7 +142,9 @@
 											use(href="./img/spriteSvg.svg#svg-close")
 									
 									//==== кнопка, открывающая список кодов ОКВЭД в модальном окне=====
-									button.mini-btn(frame-btn="modal-okved") 111
+									button.mini-btn(frame-btn="modal-okved")
+										svg.svg-list
+											use(href="./img/spriteSvg.svg#svg-list")
 							
 							//====  drop список=====
 							.mySelect-drop
@@ -208,8 +210,8 @@
 		.fly-center
 			button.btn-accent(type="button" data-btn="page_2")
 				span Далее
-				svg.chevron-right
-					use(href="./img/spriteSvg.svg#chevron-right")
+				svg.svg-right
+					use(href="./img/spriteSvg.svg#svg-right")
 			
 			.calculator-page 1/2
 					
