--- a/src/pug/sections/_calculate.pug
+++ b/src/pug/sections/_calculate.pug
@@ -3,7 +3,7 @@
 		.container
 			ul#sticky-menu
 				li
-					a(href="#calculator").active Калькулятор мер поддержки
+					a(href="#calculator").active Калькулятор мер&nbsp;поддержки
 				li
 					a(href="#") Региональные меры
 
