--- a/src/pug/sections/_calculate-form-3.pug
+++ b/src/pug/sections/_calculate-form-3.pug
@@ -4,7 +4,7 @@
 		.calculator-form-restart.fly-center
 			p.text-24 Начать поиск заново
 			
-			button.btn-accent(type="button"  data-btn = "page_1")
+			button.btn-accent.btn-xs-short(type="button"  data-btn = "page_1")
 				span Начать
 				svg.svg-search
 					use(href="./img/spriteSvg.svg#svg-search")
