--- a/src/scss/sections/_calculate.scss
+++ b/src/scss/sections/_calculate.scss
@@ -596,6 +596,9 @@
 	justify-content: space-between;
 	padding: 10px 12px;
 	font-size: 14px;
+	@media (max-width: 767px) {
+	padding: 10px 2px;
+	}
 	
 }
 
@@ -607,16 +610,23 @@
 	width: fit-content;
 	display: flex;
 	color: $sec;
+	text-align: center;
 	&:nth-child(2n){
 		transform: translateY(-50px);
+	}
+	@media (max-width: 767px) {
+		font-size: 12px;
+		line-height: 1.3;
+		&:nth-child(2n) {
+			transform: translateY(-65px);
+		}
 	}
 }
 
 .range {
 	display: flex;
 	align-items: center;
-	
-	margin-top: 60px;
+	margin-top: 88px;
 }
 
 .calculator-range-block{
@@ -625,8 +635,23 @@
 		.body-bold{
 			color: $ac1;
 			flex-grow:1;
-			padding-right: 16px;
+			padding-right: 24px;
 		}
+	@media(max-width:699px){
+		flex-direction: column;
+		&>*{width: 100%;}
+		.body-bold{margin-bottom: 30px;}
+	}
+
+	}
+
+}
+.calculator-range-block .switch-block{
+	
+	@media (max-width: 767px) {
+		width: 280px;
+		justify-content: space-between;
+		
 	}
 }
 .form-item.form-item--range{
@@ -641,4 +666,6 @@
 
 .calculator-form-restart{
 	justify-content: space-between;
+
+	
 }
