--- a/src/pug/sections/_calculate-form-3.pug
+++ b/src/pug/sections/_calculate-form-3.pug
@@ -8,3 +8,17 @@
 				span Начать
 				svg.svg-search
 					use(href="./img/spriteSvg.svg#svg-search")
+	
+	.calculator-search-results
+		.h3 Результат поиска
+		.calculator-search-tabs
+			.txt-upper Категории поддержки:
+			.tabs-btns
+				ul
+					li Все
+					li Налоговая
+					li Субсидия
+					li Кредиты и займы
+					li Имущественная
+					li Консультационная
+					li Образовательная
