--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,6 +35,7 @@
 @import "sections/_invest-catalog.scss";
 @import "sections/_partnership.scss";
 @import "sections/_calculate.scss";
+@import "sections/_calculator-results.scss";
 // @import "sections/.scss";
 // @import "sections/.scss";
 @import "pages/_news.scss/";
