--- a/src/pug/sections/_calculate-form-3.pug
+++ b/src/pug/sections/_calculate-form-3.pug
@@ -12,13 +12,43 @@
 	.calculator-search-results
 		.h3 Результат поиска
 		.calculator-search-tabs
-			.txt-upper Категории поддержки:
-			.tabs-btns
-				ul
-					li Все
-					li Налоговая
-					li Субсидия
-					li Кредиты и займы
-					li Имущественная
-					li Консультационная
-					li Образовательная
+			.calculator-search-tabs__title
+				.txt-upper Категории поддержки:
+				.tabs-btns
+					ul
+						li.tag.active Все
+						li.tag Налоговая
+						li.tag Субсидия
+						li.tag Кредиты и займы
+						li.tag Имущественная
+						li.tag Консультационная
+						li.tag Образовательная
+			
+			.calculator-search-tabs__content.content-page
+				.acor-container
+					//=========== single block =============
+					.acor-item
+						input#acor1(type='checkbox' name='acor' )
+						label(for='acor1')
+							.acor-item__num 01
+							.body-3 Приоритетный инвестиционный проект
+							.tag Налоговая
+						.acor-body.fl-block
+							.acor-body__text
+								h4 Размер поддержки:
+								ul
+									li льгота по налогу на прибыль: снижение на 4,5 %
+									li налог на имущество: снижение до 0
+									li субсидия на % по кредитам: до 1/2 ставки ЦБ РФ
+									li возмещение затрат на инженерную инфраструктуру сельхозорганизациям с объемом инвестиций свыше 2,5 млрд руб. - размер устанавливается инвестиционным соглашением
+									li льгота по арендной плате за земельные участки - размер устанавливается инвестиционным соглашением
+
+								p Объем инвестиций: от 100 млн рублей (не применяется для проектов в дотационных муниципалитетах)
+								p Рабочие места: положительное значение
+								p Куда обратиться: министерство экономического развития и инвестиций Нижегородской области
+							
+							.acor-body__btn
+								button.btn-outline
+									span  Подробнее
+									svg.svg-search
+										use(href="./img/spriteSvg.svg#svg-search")
