--- a/src/pug/sections/_calculate-form-3.pug
+++ b/src/pug/sections/_calculate-form-3.pug
@@ -1,5 +1,5 @@
 //============= СТР 3 Результаты ПОИСКА ============
-.calculator-form-page.calculator-form-results(data-page="page_3")
+.calculator-form-page.calculator-form-results.gap-40(data-page="page_3")
 	.form-fieldset
 		.calculator-form-restart.fly-center
 			p.text-24 Начать поиск заново
@@ -10,7 +10,9 @@
 					use(href="./img/spriteSvg.svg#svg-search")
 	
 	.calculator-search-results
-		.h3 Результат поиска
+		.calculator-search-results__header.fly-center
+			.h3 Результат поиска
+			.txt-bold Всего 11 предложений
 		.calculator-search-tabs
 			.calculator-search-tabs__title
 				.txt-upper Категории поддержки:
