--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -237,6 +237,15 @@ article{
 		}
 	}
 }
+.gap-40{
+	&>*+* {
+		margin-top: 40px;
+
+		@media (max-width: 767px) {
+			margin-top: 30px;
+		}
+	}
+}
 .gap-10{
 	&>*+*{margin-top: 10px!important;}
 }
